# RustHTTPServer

./: Cargo.toml  README.md
src/: lib.rs  request.rs
test/: Cargo.toml  test.rs
test/public/: index.html
